--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,9 @@ body {
 .header {
   padding-top: 64px;
 }
+.nav-wrapper {
+  margin-bottom: 198px;
+}
 
 .container-wide {
   width: 1790px;
@@ -78,4 +81,74 @@ body {
 .account:hover {
   color: #fbd784;
   transition: color 250ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+}
+
+/* HERO */
+.hero {
+  display: block;
+  max-width: 950px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  text-decoration: none;
+  transition: transform 250ms cubic-bezier(1.000, 0.295, 0.360, 1.650);
+}
+.hero:hover {
+    transform: translateY(-7%);
+    transition: transform 250ms cubic-bezier(1.000, 0.295, 0.360, 1.650);
+}
+.hero-cat {
+  position: relative;
+  margin-bottom: 32px;
+  font-weight: 800;
+  padding-left: 104px;
+  font-size: 18px;
+  line-height: 1.222;
+  letter-spacing: 6px;
+  text-transform: uppercase;
+  color: #fbd784;
+}
+
+.hero-cat::before {
+  position: absolute;
+  display: block;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  content: "";
+  width: 72px;
+  height: 2px;
+  background-color: #fbd784;
+}
+
+.hero-title {
+  font-family: "Playfair Display", serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 80px;
+  line-height: 1.136;
+
+  text-transform: capitalize;
+  color: #ffffff;
+}
+.hero-scroll {
+  display: inline-block;
+  position: relative;
+  padding-right: 32px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.222;
+  color: #ffffff;
+}
+
+.hero-scroll::after {
+  display: block;
+  width: 16px;
+  height: 25px;
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 0;
+  background-image: url("./../svg/arrow-down.svg");
 }
